--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<header> my-profile </header>
-<section> explanations </section>
-<footer> conclusion </footer>
+<welcome-section (goto)="goto('#about-me')"></welcome-section>
+<resume [sections]="sections"></resume>
+<app-footer></app-footer>
