--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="row footer">
+<footer class="row">
   <div class="col-md-6">
     <a class="icon-link" *ngFor="let item of social" [href]="item.href" target="_blank">
       <img class="icon" [src]="'../assets/' + item.icon"/>
