--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<welcome-section (goto)="goto('#about-me')"></welcome-section>
+<welcome-section class="container-fluid" (goto)="goto('#about-me')"></welcome-section>
 <resume [sections]="sections"></resume>
 <app-footer></app-footer>
