--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -1,5 +1,5 @@
 <section id="about-me" class="about-me">
-  <div class="content">
+  <div #me class="thin-content">
     <p>
       Software Engineer, IDF's Captain officer, Mamram Graduate experienced in the industry including code
       development, testing, integration and service management within an IT organization. B.A in Computer Science –
@@ -12,7 +12,7 @@
   </div>
 </section>
 <section *ngFor="let section of sections">
-  <div class="content">
+  <div #me class="content">
     <h2>{{section.title}}</h2>
     <section-details [details]="section.details"></section-details>
   </div>
