--- a/src/app/resume/section-details.component.html
+++ b/src/app/resume/section-details.component.html
@@ -1,11 +1,33 @@
-<div *ngFor="let item of details" role="tab">
-  <h3><a role="button" href="#" (click)="toggleBullets($event, item)">{{item.title}}</a></h3>
-  <div class="row" *ngIf="shouldShowBullets(item)">
-    <ul class="col-sm-12 col-md-9">
-      <li *ngFor="let bullet of item.content">{{bullet}}</li>
-    </ul>
-    <div *ngIf="item.image" class="col-sm-12 col-md-3 logo">
-      <img [src]="'../assets/' + item.image"/>
+<!--<div *ngFor="let item of details" role="tab">-->
+  <!--<h3><a role="button" href="#" (click)="toggleBullets($event, item)">{{item.title}}</a></h3>-->
+  <!--<div class="row" [ngClass]="{'expand': shouldShowBullets(item)}">-->
+    <!--<ul class="col-sm-12 col-md-9">-->
+      <!--<li *ngFor="let bullet of item.content">{{bullet}}</li>-->
+    <!--</ul>-->
+    <!--<div *ngIf="item.image" class="col-sm-12 col-md-3 logo">-->
+      <!--<img [src]="'../assets/' + item.image"/>-->
+    <!--</div>-->
+  <!--</div>-->
+<!--</div>-->
+
+
+<div class="timeline">
+  <div *ngFor="let item of details" class="event" role="tab" (mouseenter)="choose(item)">
+    {{item.title}}
+  </div>
+</div>
+<div class="slideshow">
+  <div *ngFor="let item of details" class="details" [ngClass]="{'active': item === displayedItem}">
+    <h3>{{item.title}}</h3>
+    <div class="container-fluid">
+      <div class="row">
+        <ul class="col-sm-12 col-md-9">
+          <li *ngFor="let bullet of item.content">{{bullet}}</li>
+        </ul>
+        <div *ngIf="item.image" class="col-sm-12 col-md-3 logo">
+          <img [src]="'../assets/' + item.image"/>
+        </div>
+      </div>
     </div>
   </div>
 </div>
