--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,6 +1,9 @@
-<aside>
-  <div>Alon Yehezkel</div>
-  <div>Software Engineer</div>
-  <div>Front-End Developer</div>
-  <a class="btn" (click)="aboutMe()">About Me</a>
-</aside>
+<div class="row">
+  <h1 class="col-sm-12 col-md-6 text">
+    <div>Alon Yehezkel</div>
+    <div>Software Engineer</div>
+    <div>Front-End Developer</div>
+    <a class="btn about-btn" (click)="aboutMe()">About Me</a>
+  </h1>
+  <div class="col-sm-12 col-md-6 image"></div>
+</div>
