--- a/src/app/welcome/welcome.component.scss
+++ b/src/app/welcome/welcome.component.scss
@@ -1,19 +1,26 @@
-aside {
-  position: absolute;
-  top: 30%;
-  left: 10%;
-
-  font-weight: 700;
-  color: #FFF;
-  font-size: 48px;
-
-  @media (max-width: 600px) {
-    left: auto;
-  }
+welcome-section {
+  display: block;
+}
+.text {
+  padding: 24px;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.btn {
+.image {
+  height: 500px;
+  background-image: url('../../assets/selfie-portrait.png');
+  background-size: cover;
+  //background-attachment: fixed;
+  background-position: top right;
+}
+
+.about-btn {
+  margin-top: 24px;
   font-size: 18px;
   font-weight: 700;
-  border: 1px solid #FFF;
+  border: 1px solid #000;
 }
