--- a/my-profile/src/app/welcome/welcome.component.html
+++ b/my-profile/src/app/welcome/welcome.component.html
@@ -3,7 +3,7 @@
     <div>Alon Yehezkel</div>
     <div>Software Engineer</div>
     <div>Front-End Developer</div>
-    <a class="btn about-btn" (click)="aboutMe()">About Me</a>
+    <wired-button class="about-btn" (click)="aboutMe()">About Me</wired-button>
   </h1>
   <div class="col-sm-12 col-md-6 image"></div>
 </div>
