--- a/cv-portfolio/src/components/layout/Timeline.module.css
+++ b/cv-portfolio/src/components/layout/Timeline.module.css
@@ -1,28 +1,32 @@
-.timeline {
-  display: block;
-  margin-left: 2em;
+.timeline, .timeline > li {
+  list-style: none;
+  padding: 0;
   position: relative;
 }
+
+.timeline {
+  border-left: 1px solid var(--contact-border-color);
+}
+
 .timeline > li {
-  list-style-type: none;
+  position: relative;
+  padding-bottom: 1rem;
+  padding-left: 2em;
 }
 
-.timelineLine::before {
-  content: "";
-  display: block;
-  position: absolute;
-  border-radius: 50%;
-  background: red;
-  top: 0;
-  left: -2px;
-  width: 5px;
-  height: 5px;
+.timeline > li:last-child{
+  padding-bottom: 0;
+  border-left: 0px;
 }
-
-.timelineLine {
+.timeline > li::before{
+  content: '';
+  width: 0; 
+  height: 0; 
+  border-top: 0.7em solid transparent;
+  border-bottom: 0.7em solid transparent;
+  
+  border-left: 0.7em solid var(--contact-border-color);
   position: absolute;
-  top: 0.5em;
-  bottom: 0.5em;
-  left: -1em;
-  border: 1px black solid;
+  left: 0;
+  top: calc(50% - 1.4em);
 }
