--- a/cv-portfolio/src/components/sections/Experience.module.css
+++ b/cv-portfolio/src/components/sections/Experience.module.css
@@ -1,11 +1,4 @@
-.experience {
-  /* padding: 1em; */
-}
-
-.descriptionList {
-  margin-left: 1em;
-}
-
 .descriptionList li {
-  list-style-type: none;
+  list-style: none;
+  padding-left: 1rem;
 }
