--- a/cv-portfolio/src/components/layout/Section.module.css
+++ b/cv-portfolio/src/components/layout/Section.module.css
@@ -1,8 +1,10 @@
-.title {
-  text-transform: uppercase;
-  font-style: italic;
-  padding-bottom: 0.5rem;
-  margin-bottom: 0.5rem;
-  letter-spacing: 0.2rem;
-  border-bottom: 1px solid var(--contact-border-color);
+@media screen {
+  .title {
+    text-transform: uppercase;
+    font-style: italic;
+    padding-bottom: 0.5rem;
+    margin-bottom: 0.5rem;
+    letter-spacing: 0.2rem;
+    border-bottom: 1px solid var(--contact-border-color);
+  }
 }
