--- a/cv-portfolio/src/components/layout/ZigZagList.module.css
+++ b/cv-portfolio/src/components/layout/ZigZagList.module.css
@@ -7,39 +7,41 @@
   position: relative;
   padding-left: 2rem;
 }
-.zigZagList::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  border-right: 1px solid var(--contact-border-color);
+@media screen {
+  .zigZagList::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    border-right: 1px solid var(--contact-border-color);
+  }
+  
+  .listItem, .listItemAlt {
+    position: relative;
+    color: var(--text-color-inverse);
+    display: block;
+    padding: 1rem;
+    background: var(--contact-border-color);
+    border-radius: 0 16px 16px 0;
+  }
+  
+  .listItem::before, .listItemAlt::before {
+    content: "";
+    position: absolute;
+    top: 1rem;
+    right: 100%;
+    border-top: 0.7em solid transparent;
+    border-bottom: 0.7em solid transparent;
+    border-right: 0.7em solid var(--contact-border-color);
+  }
+  
+  .listItemAlt {
+    margin: 1rem 0;
+  }
 }
 
-.listItem, .listItemAlt {
-  position: relative;
-  color: var(--text-color-inverse);
-  display: block;
-  padding: 1rem;
-  background: var(--contact-border-color);
-  border-radius: 0 16px 16px 0;
-}
-
-.listItem::before, .listItemAlt::before {
-  content: "";
-  position: absolute;
-  top: 1rem;
-  right: 100%;
-  border-top: 0.7em solid transparent;
-  border-bottom: 0.7em solid transparent;
-  border-right: 0.7em solid var(--contact-border-color);
-}
-
-.listItemAlt {
-  margin: 1rem 0;
-}
-
-@media (min-width: 767px) {
+@media screen and (min-width: 767px) {
   .zigZagList {
     padding-left: 0;
   }
