--- a/cv-portfolio/src/components/sections/Profile.module.css
+++ b/cv-portfolio/src/components/sections/Profile.module.css
@@ -1,3 +1,7 @@
+.profile {
+  padding: 24px 48px;
+}
+
 .avatar {
   padding: 1em;
   position: relative;
@@ -35,14 +39,6 @@
   }
 }
 
-.name {
-  /* text-align: center; */
-  /* text-transform: uppercase; */
-  /* font-weight: bold; */
-  /* letter-spacing: 0.2rem; */
-  /* opacity: 0.5; */
-}
-
 .role {
   font-style: italic;
   white-space: nowrap;
@@ -52,7 +48,19 @@
   content: '';
   display: block;
   margin: auto;
-  border-top: 1px solid var(--contact-border-color);
   margin-top: 0.5rem;
-  padding-top: 1rem;
+}
+
+@media screen and (max-width: 767px) {
+  .profile {
+    display: 'flex';
+    flex-direction: row;
+  }
+}
+
+@media screen and (min-width: 767px) {
+  .profile {
+    margin: 12px;
+    border-radius: 16px;
+  }
 }
