--- a/cv-portfolio/src/components/layout/ZigZagList.module.css
+++ b/cv-portfolio/src/components/layout/ZigZagList.module.css
@@ -17,6 +17,7 @@
     content: "";
     position: absolute;
     top: 1rem;
+    
     right: 100%;
     border-top: 0.7em solid transparent;
     border-bottom: 0.7em solid transparent;
@@ -29,24 +30,16 @@
 }
 
 @media screen and (min-width: 767px) {
-  .zigZagList {
-    padding-left: 0;
+  .listItem {
+    margin-right: 20%;
   }
 
   .listItemAlt {
-    margin-left: 52%;
-  }
-
-  .listItem {
-    margin-right: 52%;
+    margin-left: 20%;
     border-radius: 16px 0 0 16px;
   }
   
-  .listItem::before {
-    content: "";
-    position: absolute;
-    top: 1rem;
-    right: auto;
+  .listItemAlt::before {
     left: 100%;
     border-top: 0.7em solid transparent;
     border-bottom: 0.7em solid transparent;
