Feature/cv redesign (#8)
* redesign cv page

* profile design

* experience

* Rainy background

* profile entrence

* make background

* Education

* education

* remove unused

* experience

--- a/cv-portfolio/src/components/sections/Profile.module.css
+++ b/cv-portfolio/src/components/sections/Profile.module.css
@@ -1,3 +1,7 @@
+.profile {
+  padding: 24px 48px;
+}
+
 .avatar {
   padding: 1em;
   position: relative;
@@ -35,24 +39,29 @@
   }
 }
 
-.name {
-  /* text-align: center; */
-  /* text-transform: uppercase; */
-  /* font-weight: bold; */
-  /* letter-spacing: 0.2rem; */
-  /* opacity: 0.5; */
-}
-
 .role {
   font-style: italic;
   white-space: nowrap;
 }
 
-.contact::before {
-  content: '';
-  display: block;
-  margin: auto;
-  border-top: 1px solid var(--contact-border-color);
-  margin-top: 0.5rem;
-  padding-top: 1rem;
+.contact {
+  margin-top: 1rem;
+  text-align: center;
+}
+@media screen and (max-width: 767px) {
+  .profile {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 24px;
+  }
+}
+
+@media screen and (min-width: 767px) {
+  .profile {
+    margin: 0 12px 24px 0;
+    border-radius: 0 0 16px 0;
+    padding: 48px;
+  }
 }
