--- a/cv-portfolio/src/components/layout/ZigZagList.module.css
+++ b/cv-portfolio/src/components/layout/ZigZagList.module.css
@@ -3,13 +3,13 @@
   position: relative;
 }
 
-@media screen {  
+@media screen {
   .listItem, .listItemAlt {
     position: relative;
     color: var(--text-color-inverse);
     display: block;
     padding: 1rem;
-    background: var(--contact-border-color);
+    background: var(--chakra-colors-primary-300);
     border-radius: 0 16px 16px 0;
   }
   
@@ -17,6 +17,7 @@
     content: "";
     position: absolute;
     top: 1rem;
+    
     right: 100%;
     border-top: 0.7em solid transparent;
     border-bottom: 0.7em solid transparent;
@@ -29,24 +30,16 @@
 }
 
 @media screen and (min-width: 767px) {
-  .zigZagList {
-    padding-left: 0;
+  .listItem {
+    margin-right: 20%;
   }
 
   .listItemAlt {
-    margin-left: 52%;
-  }
-
-  .listItem {
-    margin-right: 52%;
+    margin-left: 20%;
     border-radius: 16px 0 0 16px;
   }
   
-  .listItem::before {
-    content: "";
-    position: absolute;
-    top: 1rem;
-    right: auto;
+  .listItemAlt::before {
     left: 100%;
     border-top: 0.7em solid transparent;
     border-bottom: 0.7em solid transparent;
