--- a/cv-portfolio/src/components/sections/Education.module.css
+++ b/cv-portfolio/src/components/sections/Education.module.css
@@ -4,12 +4,12 @@
 }
 
 .titleCard {
-  flex: 0 0 150px;
   position: relative;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   padding: 1.5rem;
+
 }
 .titleCard::before {
   content: "";
@@ -53,39 +53,54 @@
   flex-direction: column;
   justify-content: center;
   transition: 0.5s;
+  box-shadow: var(--chakra-colors-shadow-small-right);
+
 }
 
 .card + .card {
   margin-top: 1rem;
 }
 
+/* Desktop */
 @media screen and (min-width: 767px) {
   .education {
     max-width: 100%;
-    overflow-x: scroll;
+    /* overflow-x: scroll; */
     padding: 1rem;
   }
-  /* .card:hover {
-    transform: translate(-1rem) rotate(3deg);
-  } */
-}
 
-@media screen and (min-width: 767px) {
   .cards {
     margin-left: 1rem;
   }
 
+  .card:hover {
+    transform-origin: top left;
+    transform: rotate(-3deg);
+  }
+  .card:hover + .card {
+    transform-origin: top right;
+    transform: rotate(3deg);
+  }
+
+  .titleCard {
+    flex: 0 0 150px;
+
+  }
 }
 
+/* Mobile */
 @media screen and (max-width: 767px) {
+  .education {
+    flex-direction: column;
+  }
+  .titleCard {
+    margin: 0 5px 1.5rem;
+    padding: 1rem;
+  }
   .cards {
     flex-direction: column;
   }
   .card + .card {
     margin-top: 1rem;
-  }
-
-  .titleCard {
-    display: none;
   }
 }
